k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: drawio
  labels:
    app: drawio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: drawio
  template:
    metadata:
      labels:
        app: drawio
    spec:
      containers:
        - name: drawio
          image: jgraph/drawio:30.0.2
          ports:
            - containerPort: 8080
              name: http
          command:
            - sh
            - -c
            - |
              [...]
          volumeMounts:
            - name: drawio-config-volume
              mountPath: /config
              readOnly: true
            - name: drawio-templates-volume
              mountPath: /templates
              readOnly: true
            - name: drawio-config
              mountPath: /usr/share/webapps/drawio/js/PreConfig.js
              subPath: PreConfig.js
          resources:
            requests:
              memory: "384Mi"
              cpu: "250m"
            limits:
              memory: "1Gi"
              cpu: "1000m"
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 5
      volumes:
        - name: drawio-config-volume
          configMap:
            name: drawio-config
            items:
              - key: drawio-config.json
                path: drawio-config.json
              - key: PreConfig.js
                path: PreConfig.js
        - name: drawio-templates-volume
          configMap:
            name: drawio-config
            items:
              - key: templates.xml
                path: templates.xml
        - name: drawio-config
          configMap:
            name: drawio-config
