k8s/base/realtime-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: drawio-realtime
  labels:
    app: drawio-realtime
spec:
  type: ClusterIP
  ports:
    - port: 8081
      targetPort: 8081
      protocol: TCP
      name: websocket
  selector:
    app: drawio-realtime
